--- a/src/CruiseBundle/Resources/views/Order/orders.html.twig
+++ b/src/CruiseBundle/Resources/views/Order/orders.html.twig
@@ -26,7 +26,21 @@
 		</div>
 		
 		
-		<div class="col-sm-1">{{(order.orderPrice.itogo.priceDiscount - order.orderPrice.itogo.fee_summ )| number_format(2, '.', ' ')}}</div>
+		<div class="col-sm-1">
+		
+		{% if (order.orderPrice.itogo.priceDiscount - order.orderPrice.itogo.fee_summ ) == order.orderPrice.itogo.pay %}
+		<span style="color:red; font-weight:700;">{{(order.orderPrice.itogo.priceDiscount - order.orderPrice.itogo.fee_summ )| number_format(2, '.', ' ')}}</span>
+		<br>оплачен
+		{% elseif ((order.orderPrice.itogo.priceDiscount - order.orderPrice.itogo.fee_summ ) < order.orderPrice.itogo.pay) and (order.orderPrice.itogo.pay > 0) %}
+		<span style="color:#f0f; font-weight:700;">{{(order.orderPrice.itogo.priceDiscount - order.orderPrice.itogo.fee_summ )| number_format(2, '.', ' ')}}</span>
+		<br>переплата 	{{( order.orderPrice.itogo.pay - (order.orderPrice.itogo.priceDiscount - order.orderPrice.itogo.fee_summ )) | number_format(2, '.', ' ')}}
+		{% elseif ((order.orderPrice.itogo.priceDiscount - order.orderPrice.itogo.fee_summ ) > order.orderPrice.itogo.pay) and (order.orderPrice.itogo.pay > 0) %}
+		<span style="color:#ffb300; font-weight:700;">{{(order.orderPrice.itogo.priceDiscount - order.orderPrice.itogo.fee_summ )| number_format(2, '.', ' ')}}</span>
+		<br>остаток 	{{((order.orderPrice.itogo.priceDiscount - order.orderPrice.itogo.fee_summ ) - order.orderPrice.itogo.pay) | number_format(2, '.', ' ')}}
+		{% else %}
+		{{(order.orderPrice.itogo.priceDiscount - order.orderPrice.itogo.fee_summ )| number_format(2, '.', ' ')}}
+		{% endif %}
+		</div>
 		<div class="col-sm-1">
 			 создал:<br>
 			{% if (order.user.firstName != null) and (order.user.firstName != "") %}
