--- a/src/CruiseBundle/Resources/views/Search/searchForm.html.twig
+++ b/src/CruiseBundle/Resources/views/Search/searchForm.html.twig
@@ -3,14 +3,14 @@
 
 <div class="row">
 	<div class="col-sm-3">
-		<label class="control-label required" for="startDate">Дата отправления от</label>
+		<label class="control-label " for="startDate">Дата отправления от</label>
 		
-		<input type="date" id="startDate" name="startDate" required="required" class="form-control" value="{{form.startDate  | date('Y-m-d')}}">
+		<input type="date" id="startDate" name="startDate"  class="form-control" value="{{form.startDate  | date('Y-m-d')}}">
 	</div>		
 	<div class="col-sm-3">
-		<label class="control-label required" for="endDate">Дата прибытия по</label>
+		<label class="control-label " for="endDate">Дата прибытия по</label>
 		
-		<input type="date" id="endDate" name="endDate" required="required" class="form-control" value="{{form.endDate | date('Y-m-d')}}">
+		<input type="date" id="endDate" name="endDate" class="form-control" value="{{form.endDate | date('Y-m-d')}}">
 	</div>			
 	<div class="col-sm-3">
 		<label class="control-label" for="ship">Теплоход</label>
@@ -26,7 +26,7 @@
 		</select>
 	</div>				
 	<div class="col-sm-3">
-		<label class="control-label required" for="placeStart">Город отправления</label>
+		<label class="control-label" for="placeStart">Город отправления</label>
 		
 		<select id="placeStart" name="placeStart" class="form-control">
 		<option value="all">Все города</option>
@@ -54,9 +54,9 @@
 	
 			<div class="col-sm-4" style="padding:20px 15px 0 15px">
 			
-				<label class="control-label required" for="form_days">Продолжительность</label>
+				<label class="control-label" for="form_days">Продолжительность</label>
 				
-				<input type="text" id="days" name="days" required="required" data-slider-min="{{form.minDays}}" data-slider-max="{{form.maxDays}}" data-slider-value="[{{form.days}}]" value="{{form.days}}"  class="form-control">		 
+				<input type="text" id="days" name="days" data-slider-min="{{form.minDays}}" data-slider-max="{{form.maxDays}}" data-slider-value="[{{form.days}}]" value="{{form.days}}"  class="form-control">		 
 			</div>
 			
 			<div class="col-sm-4" style="padding:20px 15px 0 15px">
