Поправлена оплата, скидка мостурфлота, добавлен внешний ID заказа

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -189,7 +189,7 @@ filter='yui_css'
           <div class="container ">
 			<div class="row">
 				<div class="col-sm-12" itemscope="" itemtype="https://schema.org/Organization" >
-				1997-2017 <span itemprop="name">ВАШЕ РЕЧНОЕ АГЕНТСТВО</span><br>
+				1997-{{ "now"|date("Y") }} <span itemprop="name">ВАШЕ РЕЧНОЕ АГЕНТСТВО</span><br>
 				
 				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
 				<span itemprop="addressLocality">Москва</span>,  <span itemprop="streetAddress">ул.Никольская, д 4/5, офис 403</span>.
