--- a/app/Resources/views/shipcabinimage/new.html.twig
+++ b/app/Resources/views/shipcabinimage/new.html.twig
@@ -7,7 +7,7 @@
         {{ form_widget(form) }}
 		<div id="dropZone" class="clearfix">
 			<div id="text">Для загрузки, перетащите файлы сюда.</div>
-			
+			<div class="sortable"></div>
 		</div>
         <input type="submit" value="Create" />
     {{ form_end(form) }}
