--- a/src/BaseBundle/Resources/views/Page/index.html.twig
+++ b/src/BaseBundle/Resources/views/Page/index.html.twig
@@ -23,8 +23,19 @@
 
 			
             <div class="item active">
+					<a href="/specialoffers/happy">
+						<img src="{{asset('images/slider/slide-8.jpg')}}" alt="">
+					</a>
+                <div class="carousel-caption">
+                    
+                </div>
+            </div>	
+			
+            <div class="item">
 					
-						<img src="{{asset('images/slider/slide-7.jpg')}}" alt="">
+				
+				<img src="{{asset('images/slider/slide-7.jpg')}}" alt="">
+				
 					
                 <div class="carousel-caption">
                     
