вывод количества тарифов в заказе

--- a/src/CruiseBundle/Resources/views/Cruise/cruiseDetail.html.twig
+++ b/src/CruiseBundle/Resources/views/Cruise/cruiseDetail.html.twig
@@ -414,6 +414,9 @@ label.checked {
 
 
 <p>* Цены действительны на момент публикации и могут незначительно измениться до полной оплаты рейса.</p>
+
+{{ cruise.turOperator.textCruise | raw }}
+
 {% else %}
 <p>Нет доступных круизов</p>
 {% endif %}
