--- a/src/CruiseBundle/Resources/views/Cruise/cruises.html.twig
+++ b/src/CruiseBundle/Resources/views/Cruise/cruises.html.twig
@@ -41,7 +41,7 @@
 		
 		{% if cruise.typeDiscount %}
 		
-			{% if (cruise.typeDiscount.id == 1) %}<span class="table-special-span color-gk">«Счастливый» круиз</span>{% endif %}
+			{% if (cruise.typeDiscount.id == 1) %}<span class="table-special-span color-gk">«Счастливый круиз»</span>{% endif %}
 
 			{% if (cruise.typeDiscount.id == 2) %} <span class="table-special-span color-st">Специальный тариф</span> {% endif %}
 		
