--- a/src/ManagerBundle/Resources/views/Manager/invoices.html.twig
+++ b/src/ManagerBundle/Resources/views/Manager/invoices.html.twig
@@ -16,8 +16,13 @@
 {{ form_row(form.buyer) }}	
 </div>	
 <div class="col-sm-2">
+{{ form_row(form.agency) }}	
+</div>	
+
+<div class="col-sm-2">
 {{ form_row(form.del) }}	
 </div>	
+
 <div class="col-sm-2">
 {{ form_row(form.submit) }}	
 </div>
