--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -102,7 +102,7 @@ filter='yui_css'
 			
 			</div>
 			
-			<div class="visible-xs" style="position:absolute; right:70px; top:90px; "  >
+			<div class="visible-xs" style="position:absolute; right:70px;  "  >
 
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 
