--- a/src/CruiseBundle/Resources/views/Order/invoice.html.twig
+++ b/src/CruiseBundle/Resources/views/Order/invoice.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-{{dump(orderPrice)}}
+{#{dump(orderPrice)}#}
 
 {#% for room in rooms %}
 	<span style="padding:10px; margin:5px;">{{room.number}}</span>
