--- a/src/CruiseBundle/Resources/views/Order/invoice.html.twig
+++ b/src/CruiseBundle/Resources/views/Order/invoice.html.twig
@@ -268,6 +268,55 @@
 
 
 
+{% for serviceForm in form.service %}
+	<div style="border:1px solid #aaa; margin-bottom:10px; padding-top:10px;" >
+		<div class="col-sm-12">
+			Дополнительная услуга
+			{% if is_granted('ROLE_MANAGER') %}
+				&nbsp;&nbsp;&nbsp;<a class="btn btn-danger del_service" href="{{path('invoice_remove_service',{'hash':order.idHash, 'service':serviceForm.vars.data.id})}}">Удалить сервис</a>
+			{% endif %}
+			
+			<br>
+			
+		</div>	
+		<div class="row">
+			<div class="col-sm-12">
+				<div class="col-sm-10">
+					{% if serviceForm.name is defined %}
+						{{ form_widget(serviceForm.name) }}
+					{% else %}
+						{{serviceForm.vars.data.name}} 				
+					{% endif %}
+				</div>
+				<div class="col-sm-2">
+					{% if serviceForm.priceValue is defined %}
+						{{ form_widget(serviceForm.priceValue) }}
+					{% else %}
+						{{serviceForm.vars.data.priceValue}} руб.
+					{% endif %}
+				</div>
+				<div class="col-sm-2">
+					{% if serviceForm.isFee is defined %}
+						{{ form_widget(serviceForm.isFee) }}
+					{% endif %}
+				</div>
+				<div class="col-sm-2">
+					{% if serviceForm.isPermanentDiscount is defined %}
+						{{ form_widget(serviceForm.isPermanentDiscount) }}
+					{% endif %}
+				</div>
+				<div class="col-sm-2">
+					{% if serviceForm.isSesonDiscount is defined %}
+						{{ form_widget(serviceForm.isSesonDiscount) }}
+					{% endif %}
+				</div>	
+			</div>
+		</div>
+	</div>	
+{% endfor %}
+
+
+
 {% if form.commentManager is defined %}
 {{ form_row(form.commentManager, {'label':'Комментарий Менеджера'}) }}
 {% endif %}
@@ -328,6 +377,8 @@
 </select>
 &nbsp;
 <button class="btn btn-warning add_room">Добавить каюту</button>
+&nbsp;
+<a href="{{path('invoice_add_service',{'hash':order.idHash})}}" class="btn btn-warning add_service">Добавить сервис</a>
 
 
 {% endif %}
@@ -350,10 +401,16 @@
 	
 	$('.tariff-price').trigger('change');
 	
+	$('.del_service').click(function(){
+		if (!confirm("Удалить?")) return false;
+	});		
 	$('.del_place').click(function(){
 		if (!confirm("Удалить?")) return false;
 	});	
 	$('.add_place').click(function(){
+		if (!confirm("Добавить?")) return false;
+	});	
+	$('.add_service').click(function(){
 		if (!confirm("Добавить?")) return false;
 	});
 
