--- a/src/CruiseBundle/Resources/views/Order/invoice.html.twig
+++ b/src/CruiseBundle/Resources/views/Order/invoice.html.twig
@@ -444,7 +444,7 @@
 		$("select#cruisebundle_ordering_orderItems_0_orderItemPlaces_0_passDate_month [value='"+$('select#cruisebundle_ordering_buyer_passDate_month :selected').val()+"']").attr("selected", "selected");
 		$("select#cruisebundle_ordering_orderItems_0_orderItemPlaces_0_passDate_year [value='"+$('select#cruisebundle_ordering_buyer_passDate_year :selected').val()+"']").attr("selected", "selected");
 		
-		
+		return false;
 	});
 	
 
