Фильтр по заявке

--- a/src/ManagerBundle/Resources/views/Manager/invoices.html.twig
+++ b/src/ManagerBundle/Resources/views/Manager/invoices.html.twig
@@ -17,6 +17,9 @@
 </div>	
 <div class="col-sm-2">
 {{ form_row(form.agency) }}	
+</div>		
+<div class="col-sm-2">
+{{ form_row(form.order) }}	
 </div>	
 
 <div class="col-sm-2">
