Подправили кнопочку в фильтре

--- a/src/CruiseBundle/Resources/views/Order/orders.html.twig
+++ b/src/CruiseBundle/Resources/views/Order/orders.html.twig
@@ -23,7 +23,7 @@
 
 
 <div class="col-sm-2">
-{{ form_row(formOrder.submit) }}	
+{{ form_row(formOrder.submit,{'attr':{'style':'margin-top:25px;'}}) }}	
 </div>
 {{ form_end(formOrder) }}
 </div>
