Отчёт агента пока только у менеджера

--- a/app/Resources/views/basemanager.html.twig
+++ b/app/Resources/views/basemanager.html.twig
@@ -62,6 +62,9 @@
 				<a href="{{path('manager_agency_index',{'all':'true'})}}">Агентства все</a>
 			</li>
 			<li class="dropdown">
+				<a href="{{path('manager_agency_report_index')}}">Отчёты агентств за месяц</a>
+			</li>
+			<li class="dropdown">
 				<a href="{{path('manager_user_index')}}">Пользователи</a>
 			</li>
 
