--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -215,7 +215,55 @@ filter='yui_css'
 				<span itemprop="addressLocality">Санкт-Петербург</span>, <span itemprop="streetAddress">Каменноостровский проспект, д. 40, офис 501</span> 
 				Телефон: <span itemprop="telephone">+7 (812) 67-03-700</span>  E-mail: <a itemprop="email" href="mailto:spb@rech-agent.ru">spb@rech-agent.ru</a>
 				<br></span>
+				
+				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
+				<span itemprop="addressLocality">Нихний Новгород</span>
+				<span style="display:none" itemprop="telephone">+7 (495) 649-83-71</span>
+				<a style="display:none" itemprop="email" href="mailto:info@rech-agent.ru">info@rech-agent.ru</a>
+				</span>
+				
+				,				
+				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
+				<span itemprop="addressLocality">Волгоград</span>
+				<span style="display:none" itemprop="telephone">+7 (495) 649-83-71</span>
+				<a style="display:none" itemprop="email" href="mailto:info@rech-agent.ru">info@rech-agent.ru</a>
+				</span>
+				,
+								
+				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
+				<span itemprop="addressLocality">Саратов</span>
+				<span style="display:none" itemprop="telephone">+7 (495) 649-83-71</span>
+				<a style="display:none" itemprop="email" href="mailto:info@rech-agent.ru">info@rech-agent.ru</a>
+				</span>
+				,
+								
+				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
+				<span itemprop="addressLocality">Казань</span>
+				<span style="display:none" itemprop="telephone">+7 (495) 649-83-71</span>
+				<a style="display:none" itemprop="email" href="mailto:info@rech-agent.ru">info@rech-agent.ru</a>
+				</span>
+				,
+								
+				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
+				<span itemprop="addressLocality">Самара</span>
+				<span style="display:none" itemprop="telephone">+7 (495) 649-83-71</span>
+				<a style="display:none" itemprop="email" href="mailto:info@rech-agent.ru">info@rech-agent.ru</a>
+				</span>
+				,
+								
+				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
+				<span itemprop="addressLocality">Астрахань</span>
+				<span style="display:none" itemprop="telephone">+7 (495) 649-83-71</span>
+				<a style="display:none" itemprop="email" href="mailto:info@rech-agent.ru">info@rech-agent.ru</a>
+				</span>
+							
+				<br>
+				
 				Информация на сайте не является публичной офёртой и носит информационный характер. 
+				</div>
+				<div class="col-sm-12">
+				Ближайшие круизы: <a href="/cruise/month/2018-04">Апрель</a>, <a href="/cruise/month/2018-05">Май</a>, <a href="/cruise/month/2018-06">Июнь</a> и <a href="/cruise/month/2018-07">Июль</a>
+				
 				</div>
 			</div>
 		  </div>
