отчёт по продажам за месяц

--- a/app/Resources/views/basemanager.html.twig
+++ b/app/Resources/views/basemanager.html.twig
@@ -67,6 +67,9 @@
 			<li class="dropdown">
 				<a href="{{path('manager_user_index')}}">Пользователи</a>
 			</li>
+			<li class="dropdown">
+				<a href="{{path('manager_ship_fee_index',{'turOperator':3})}}">Комиссии по теплоходам инфофлота</a>
+			</li>
 
 
 
