отчёты по продажам на каждое агентство

--- a/src/ManagerBundle/Resources/views/Agency/index.html.twig
+++ b/src/ManagerBundle/Resources/views/Agency/index.html.twig
@@ -61,7 +61,7 @@
 {% block javascriptsready %}
 
 	$(function () {
-            $("#form_agency").editableSelect();
+            $("form #agency").editableSelect();
         });
 	
 {% endblock %}
