картинка теплохода в API v1

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -32,7 +32,7 @@
 
 		<label for="remember_me"><input  type="checkbox" id="remember_me" name="_remember_me" value="on" /> {{ 'security.login.remember_me'|trans }}</label>
 	  </div>
-		<input class="btn btn-default" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+		<input class="btn btn-success" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
 		
 		<a href="{{path('fos_user_registration_register')}}" class="btn btn-warning pull-right">Регистрация нового пользователя</a>
 		<a href="{{path('fos_user_resetting_request')}}" class="btn btn-default">Забыл пароль</a>
