--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -217,39 +217,34 @@ filter='yui_css'
 				<br></span>
 				
 				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-				<span itemprop="addressLocality">Нихний Новгород</span>
+				<span itemprop="addressLocality">Нижний Новгород</span>
 				<span style="display:none" itemprop="telephone">+7 (495) 649-83-71</span>
 				<a style="display:none" itemprop="email" href="mailto:info@rech-agent.ru">info@rech-agent.ru</a>
-				</span>
+				</span>,	
 				
-				,				
 				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
 				<span itemprop="addressLocality">Волгоград</span>
 				<span style="display:none" itemprop="telephone">+7 (495) 649-83-71</span>
 				<a style="display:none" itemprop="email" href="mailto:info@rech-agent.ru">info@rech-agent.ru</a>
-				</span>
-				,
+				</span>,
 								
 				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
 				<span itemprop="addressLocality">Саратов</span>
 				<span style="display:none" itemprop="telephone">+7 (495) 649-83-71</span>
 				<a style="display:none" itemprop="email" href="mailto:info@rech-agent.ru">info@rech-agent.ru</a>
-				</span>
-				,
+				</span>,
 								
 				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
 				<span itemprop="addressLocality">Казань</span>
 				<span style="display:none" itemprop="telephone">+7 (495) 649-83-71</span>
 				<a style="display:none" itemprop="email" href="mailto:info@rech-agent.ru">info@rech-agent.ru</a>
-				</span>
-				,
+				</span>,
 								
 				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
 				<span itemprop="addressLocality">Самара</span>
 				<span style="display:none" itemprop="telephone">+7 (495) 649-83-71</span>
 				<a style="display:none" itemprop="email" href="mailto:info@rech-agent.ru">info@rech-agent.ru</a>
-				</span>
-				,
+				</span>,
 								
 				<span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
 				<span itemprop="addressLocality">Астрахань</span>
