Картинки кают в API, поправлен слайдер в форме поиска

--- a/src/CruiseBundle/Resources/views/Search/searchForm.html.twig
+++ b/src/CruiseBundle/Resources/views/Search/searchForm.html.twig
@@ -54,7 +54,7 @@
 	
 			<div class="col-sm-4" style="padding:20px 15px 0 15px">
 			
-				<label class="control-label" for="form_days">Продолжительность</label>
+				<label class="control-label" for="form_days">Дней в круизе</label>
 				
 				<input type="text" id="days" name="days" data-slider-min="{{form.minDays}}" data-slider-max="{{form.maxDays}}" data-slider-value="[{{form.days}}]" value="{{form.days}}"  class="form-control">		 
 			</div>
