--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -199,6 +199,25 @@ filter='yui_css'
 </div>	
 <br>
 
+		  {% for flashMessage in app.session.flashbag.get('flash') %}
+			<div id="ModalFlash" class="modal fade">
+			  <div class="modal-dialog">
+				<div class="modal-content">
+				  <!-- Заголовок модального окна -->
+				  <div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+					<h4 class="modal-title">{{ flashMessage }}</h4>
+				  </div>
+
+				  <!-- Футер модального окна -->
+				  <div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+				  </div>
+				</div>
+			  </div>
+			</div>			
+		  {% endfor %}
+
 <div class="footer">
           <div class="container ">
 			<div class="row">
@@ -353,6 +372,7 @@ output="js/js.js"
 				})
 				$("#days").slider({});
 				$('.photo').fancybox();
+				$('#ModalFlash').modal('show');
 			{% block javascriptsonload %}{% endblock %}	
 			}
 		</script>	
