--- a/src/CruiseBundle/Resources/views/Order/emailNotSale.html.twig
+++ b/src/CruiseBundle/Resources/views/Order/emailNotSale.html.twig
@@ -1,5 +1,6 @@
 <p>Имя: {{name}}</p>
 <p>Телефон: {{phone}}</p>
+<p>Email: {{email}}</p>
 
 
 <p>Теплоход «{{cruise.ship.name}}»  с {{cruise.startDate | date("d.m.Y")}} по {{cruise.endDate | date("d.m.Y")}}  <br><a href="{{absolute_url(path('cruisedetail',{'id':cruise.id}))}}">«{{cruise.name}}»</a></p>
